tests/ui/array-slice-vec/array-not-vector.stderr
error[E0308]: mismatched types
  --> $DIR/array-not-vector.rs:2:19
   |
LL |     let _x: i32 = [1, 2, 3];
   |             ---   ^^^^^^^^^ expected `i32`, found `[{integer}; 3]`
   |             |
   |             expected due to this

error[E0308]: mismatched types
  --> $DIR/array-not-vector.rs:7:20
   |
LL |     let _y: &i32 = x;
   |             ----   ^ expected `&i32`, found `&[i32]`
   |             |
   |             expected due to this
   |
   = note: expected reference `&i32`
              found reference `&[i32]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
